syntax = "proto3";

package asset_rpc;

message CreateRequest {
  string name = 1;
  string symbol = 2;
  string description = 3;
  string organization = 4;
}

message CreateResponse {
  string asset_id = 1;
}

service AssetService {
  rpc Create(CreateRequest) returns (CreateResponse);
}
